@@ -118,6 +118,7 @@ int rc = POPSERVER_ERR_UNKNOWN;
 
 #define FREEPOPSLUA_FILE "freepops.lua"
 putenv("FREEPOPSLUA_PATH_UNOFFICIAL="FREEPOPSLUA_PATH_UNOFFICIAL);
+putenv("FREEPOPS_VERSION="VERSION);
 
 //FIXME 
 //putenv("FREEPOPSLUA_USER_UNOFFICIAL="FREEPOPSLUA_USER_UNOFFICIAL);
